# CUPiD

./: .gitignore  .gitmodules  .pre-commit-config.yaml  Contributors.md  Externals.cfg  LICENSE  NCAR_tips.md  NCARtips.md  README.md  RunCESM.md  RunExternalPackages.md  RunStandalone.md  contributors.md  cupid-analysis.yml  mom6-environment.yml  pyproject.toml  runCESM.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/PULL_REQUEST_TEMPLATE/: pull_request_template.md
.github/workflows/: deploy.yml  linting.yaml  tasklist_completed.yml
.ipynb_checkpoints/: .gitignore-checkpoint
cesm_scripts/: generate_cupid_config_file.py
cime_config/: buildnml  config_tool.xml
cupid/: _jupyter-book-config-defaults.yml  build.py  clean.py  clear.py  cupid_diagnostics.py  cupid_timeseries.py  cupid_webpage.py  dev-environment.yml  generate_webpage.py  git_helper.py  ploomber.py  quickstart.py  read.py  remapping.py  run.py  run_GenTS.py  run_diagnostics.py  run_remapping.py  run_timeseries.py  timeseries.py  util.py
cupid_utils/: LICENSE  README.md  pyproject.toml
cupid_utils/cupid_utils/: __init__.py  generic_fxns.py
cupid_utils/cupid_utils/atm/: __init__.py  averaging_utils.py  nmse_utils.py
cupid_utils/cupid_utils/glc/: utils.py
cupid_utils/cupid_utils/ice/: __init__.py  plot_diff.py  vect_diff.py
cupid_utils/cupid_utils/multi-component/: spatial_means.py
cupid_utils/cupid_utils/ocn/: regional_utils.py
cupid_utils/cupid_utils/rof/: __init__.py
cupid_utils/input_files/ice/: cice_masks.yml  cice_vars.yml
docs/: ContributorsGuide.md  ContributorsGuide.rst  Contributors_Guide.md  NCARtips.rst  RunCESM.md  RunExternalPackages.md  addingnotebookstocollection.md  api.md  api.rst  cli.rst  cli_diagnostics.rst  conf.py  config.md  config.rst  contributors.rst  contributors_guide.rst  contributors_to_cupid.rst  home.rst  index.rst  install.rst  ncar_tips.rst  publishing_notebooks.md  runCESM.md  run_cesm.rst  run_external_packages.rst  run_standalone.rst
docs/cli/: cli_clean.rst  cli_diagnostics.rst  cli_timeseries.rst  cli_webpage.rst
environments/: README  cupid-analysis.yml  cupid-infrastructure.yml  dev-environment.yml  docs.yml
examples/: .gitignore  .nblibrary_sparse_checkout
examples/CrocoDash_Workshop_2025/: carib_config.yml  config.yml
examples/additional_metrics/: config.yml
examples/adf-mom6/: config.yml
helper_scripts/: .gitignore  cesm_postprocessing.sh  cesm_preview_namelists.sh  find_cupid_enddate.py  find_enddate.py  find_xml_cupid_enddate.py  generate_adf_config_file.py  generate_cupid_config_for_cesm_case.py  generate_ilamb_config_files.py  generate_ldf_config_file.py
ilamb_aux/: .gitignore  ilamb_nohoff_final_CLM_BGC_subset_template.cfg  ilamb_nohoff_final_CLM_BGC_template.cfg  ilamb_nohoff_final_CLM_SP_template.cfg
nblibrary/: Global_TS_ICEFRAC_RESTOM_tseries.ipynb
nbscuid/: _jupyter-book-config-defaults.yml  build.py  dev-environment.yml  read.py  run.py  util.py
test/: test_unit_git_helper.py
(+162 files in other folders)
