[build-system]
requires = ["setuptools>=61.0", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["cupid"]


[project]
name = "cupid"
version = "0.0.1"
authors = [
  { name="Lev Romashkov", email="eromashkova@ucar.edu" },
  { name="Teagan King", email="tking@ucar.edu" },
  { name="Michael Levy", email="mlevy@ucar.edu" },
]
description = "Notebook-Based, Super CUstomizable Infrastructure for Diagnostics"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License"
]
dependencies = [
    "black",
    "click",
    "dask",
    "dask-jobqueue",
    "intake",
    "intake-esm",
    "jinja2",
    "jupyter-book",
    "pandas",
    "papermill",
    "xarray",
    "pyyaml",
    "ploomber==0.22.3"
]

[project.urls]
repository = "https://github.com/NCAR/CUPiD"
documentation = "https://nbscuid.readthedocs.io"


[project.scripts]
cupid-run = "cupid.run:run"
cupid-build = "cupid.build:build"
